# networking

./: .gitignore  CMakeLists.txt  LICENSE  MyProject.code-workspace  Todo.md  generateVS.cmd  rpi.toolchain  wrlinux6.toolchain
cmake/: Findlibpcap.cmake  functions.cmake
code/: CMakeLists.txt  cmake_install.cmake
code/applications/: CMakeLists.txt
code/applications/alsatest/: CMakeLists.txt
code/applications/alsatest/src/: main.cpp
code/applications/echo-client/: CMakeLists.txt
code/applications/echo-client/include/: App.h
code/applications/echo-client/src/: App.cpp
code/applications/echo-server/: CMakeLists.txt
code/applications/echo-server/include/: App.h
code/applications/echo-server/src/: App.cpp
code/applications/helloworld/: CMakeLists.txt
code/applications/helloworld/src/: main.cpp
code/applications/ip-sniffer/: CMakeLists.txt
code/applications/ip-sniffer/src/: main.cpp
code/applications/miditest/: CMakeLists.txt
code/applications/miditest/include/: App.h
code/applications/miditest/src/: App.cpp
code/applications/packet-sniffer/: CMakeLists.txt
code/applications/packet-sniffer/include/: pcap-interface.h  pcap-interfaces.h
code/applications/packet-sniffer/src/: main.cpp  pcap-interface.cpp  pcap-interfaces.cpp
code/applications/soundtest/: CMakeLists.txt
code/applications/soundtest/include/: App.h
code/applications/soundtest/src/: App.cpp
code/applications/synthtest/: CMakeLists.txt
code/applications/synthtest/include/: App.h
code/applications/synthtest/src/: App.cpp  main.cpp
code/applications/tracingtest/: CMakeLists.txt
code/applications/tracingtest/include/: App.h
code/applications/tracingtest/src/: App.cpp
code/libraries/: CMakeLists.txt
code/libraries/application/: CMakeLists.txt
code/libraries/application/include/application/: TraceDatabase.h
code/libraries/application/src/: TraceDatabase.cpp
code/libraries/application/test/: CMakeLists.txt
code/libraries/application/test/include/: GoogleTest.h
code/libraries/core/: CMakeLists.txt
code/libraries/core/src/: Regex.cpp  Thread.cpp
code/libraries/core/test/: CMakeLists.txt
code/libraries/http/: CMakeLists.txt
code/libraries/http/src/: HTTPClient.cpp  HTTPClientSocket.cpp  HTTPRequest.cpp  HTTPResponse.cpp  HTTPServer.cpp  HTTPServerSocket.cpp
code/libraries/http/test/: CMakeLists.txt
code/libraries/json/: CMakeLists.txt
code/libraries/json/src/: Array.cpp  Boolean.cpp  Null.cpp  Number.cpp  Object.cpp  Parse.cpp  Parse.h  Serialization.cpp  String.cpp  Value.cpp
code/libraries/json/test/: CMakeLists.txt
code/libraries/midi/: CMakeLists.txt
code/libraries/midi/src/: IMidiInDevice.cpp  IMidiOutDevice.cpp  MidiAPIWindows.cpp  MidiAPIWindows.h
code/libraries/midi/test/: CMakeLists.txt
code/libraries/network/: CMakeLists.txt
code/libraries/network-osal/: CMakeLists.txt
code/libraries/network-osal/src/: AddressTuple.cpp  DomainSocketAddress.cpp  Ethernet.cpp  IPV4Address.cpp  IPV6Address.cpp  Interface.cpp  Interfaces.cpp  MACAddress.cpp  Network.cpp  Socket.cpp  SocketAPI.cpp  SocketDefinitions.cpp
code/libraries/network-osal/test/: CMakeLists.txt
code/libraries/network/doc/: Standards-online.md
code/libraries/network/src/: AddressTuple.cpp  Ethernet.cpp  IPV4Address.cpp  IPV4EndPoint.cpp  IPV4Socket.cpp  IPV4TCPClient.cpp  IPV4TCPClientSocket.cpp  IPV4TCPServer.cpp  IPV4TCPServerConnectionHandler.cpp  IPV4TCPServerConnectionThread.cpp  IPV4TCPServerHandler.cpp  IPV4TCPServerSocket.cpp  IPV4TCPServerThread.cpp  IPV4TCPSocket.cpp  IPV4UDPSocket.cpp  IPV6Address.cpp  IPV6EndPoint.cpp  IPV6Socket.cpp  IPV6TCPSocket.cpp  IPV6UDPSocket.cpp  Interface.cpp  Interfaces.cpp  MACAddress.cpp  Network.cpp  Socket.cpp  SocketDefinitions.cpp
code/libraries/network/test/: CMakeLists.txt
code/libraries/osal/: CMakeLists.txt
code/libraries/osal/include/osal/: Clock.h  Console.h  ErrorCode.h  FileHandling.h  ManualEvent.h  Network.h  Semaphore.h  Signal.h  StringConversion.h  Thread.h  ThreadFunctions.h  TypeInfo.h  Utilities.h
code/libraries/osal/src/: Clock.cpp  Console.cpp  ErrorCode.cpp  FileHandling.cpp  Network.cpp  Signal.cpp  StringConversion.cpp  Thread.cpp  ThreadFunctions.cpp  TypeInfo.cpp
code/libraries/osal/test/: CMakeLists.txt
code/libraries/osal/test/include/: GoogleTest.h
code/libraries/osal/test/src/: ClockTest.cpp  ConsoleTest.cpp  ErrorCodeTest.cpp  ManualEventTest.cpp  SemaphoreTest.cpp  SignalTest.cpp  StringConversionTest.cpp  ThreadFunctionsTest.cpp  ThreadTest.cpp  TypeInfoTest.cpp
code/libraries/sound/: CMakeLists.txt
code/libraries/sound/src/: AudioSessionControl.cpp  AudioSessionControl.h  DeviceCollection.cpp  DeviceCollection.h  PropertyVariant.cpp  PropertyVariant.h  RenderBuffer.cpp  RenderBuffer.h  RenderThread.cpp  RenderThread.h  SoundAPIWindows.cpp  SoundAPIWindows.h  SoundClient.cpp  SoundClient.h  WindowsCOM.cpp  WindowsCOM.h
code/libraries/sound/test/: CMakeLists.txt
code/libraries/synth/: CMakeLists.txt
code/libraries/synth/src/: Oscillator.cpp  Synth.cpp  SynthFactory.cpp  SynthRack.cpp  TestSynth.cpp
code/libraries/synth/test/: CMakeLists.txt
code/libraries/tracing/: CMakeLists.txt
code/libraries/tracing/src/: ConsoleLineWriter.cpp  LogCategory.cpp  LogWriter.cpp  Logging.cpp  ScopedTracing.cpp  TraceCategory.cpp  TraceEntry.cpp  TraceHelpers.cpp  TraceRegistry.cpp  TraceWriter.cpp  Tracing.cpp
code/libraries/tracing/test/: CMakeLists.txt
code/libraries/utility/: CMakeLists.txt
code/libraries/utility/src/: Assert.cpp  Console.cpp  Deserialization.cpp  Endian.cpp  Error.cpp  Format.cpp  GenericError.cpp  Regex.cpp  Serialization.cpp  StringFunctions.cpp
code/libraries/utility/test/: CMakeLists.txt
code/libraries/utility/test/src/: AssertTest.cpp  BidirectionalMapTest.cpp  ConsoleTest.cpp  DeserializationTest.cpp  EndianTest.cpp  EnumSerializationTest.cpp  FormatTest.cpp  MapUtilitiesTest.cpp  NullableTest.cpp  ObservableTest.cpp  RegexTest.cpp  SerializationTest.cpp  StringFunctionsTest.cpp  TriBoolTest.cpp
doc/: Layering.pptx
(+208 files in other folders)
