add_subdirectory(helloworld)
add_subdirectory(echo-client)
add_subdirectory(echo-server)
add_subdirectory(miditest)
add_subdirectory(soundtest)
add_subdirectory(synthtest)
if(PLATFORM_LINUX)
add_subdirectory(alsatest)
add_subdirectory(ip-sniffer)
IF(PCAP_FOUND)
add_subdirectory(packet-sniffer)
endif()
endif()